--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <application
         android:label="delivery_track_app"
         android:name="${applicationName}"
@@ -29,6 +30,12 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <service
+            android:name="com.transistorsoft.flutter.backgroundgeolocation.HeadlessTask"
+            android:exported="false"/>
+        <meta-data
+            android:name="com.transistorsoft.locationmanager.EVENT_TASK"
+            android:value="com.yourapp.HeadlessTask"/>
     </application>
     <queries>
         <intent>
